--- a/Projeto ADS labs/package.json
+++ b/Projeto ADS labs/package.json
@@ -4,11 +4,19 @@
   "description": "Projeto de ads labs do IFBA",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "dev": "nodemon src/server.js"
+    
   },
   "author": "Luan Silva",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "cpf-cnpj-validator": "^1.0.3",
+    "express": "^5.1.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
