--- a/Projeto ADS labs/package.json
+++ b/Projeto ADS labs/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "nodemon src/server.js"
-    
+    "dev": "nodemon src/server.js"
   },
   "author": "Luan Silva",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "express": "^5.1.0",
     "sequelize": "^6.37.7",
